json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail51.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail51.json
---
Err(
    ExpectedTokenError {
        expected: [
            Eof,
        ],
        actual: Comma,
        origin: ",",
        row: 1,
        column: 4,
    },
)
