json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail52.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail52.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "x",
        row: 1,
        column: 2,
    },
)
