json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail60.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail60.json
snapshot_kind: text
---
Ok(
    Array(
        [
            Number(
                inf,
            ),
        ],
    ),
)
